# info-window-diffusion

./: LICENSE  README.md  main.py  pyproject.toml
.trae/documents/: phase1.md  phase1_refactor_plan.md  phase2.md
configs/: phase1.yaml
iw_dm/: __init__.py
iw_dm/experiments/: __init__.py  run_phase1.py
iw_dm/toy/: __init__.py  bayes.py  gmm.py  metrics.py
iw_dm/utils/: __init__.py  snr.py  statistics.py  visualization.py
phase1_oracle/: README_phase1.md  fit_report.md  results.csv
